Correção de Erros no código

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <div class="project">
           <h3>One Piece</h3>
-          <img src="./src/imagens/image-one-piece-project-reduzida.PNG" alt="">
+          <img src="./src/imagens/image-one-piece-project-reduzida.PNG" alt="Imagem do projeto One Piece">
           <p class="info-project">Se trata de uma landing page construída durante o evento Semana do Zero ao Programador
             Contratado, do Dev em Dobro, ela apresenta os personagens principais do anime One Piece. É uma página
             responsiva, acessivél e conta com recursos de interatividade com o usuário</p>
@@ -167,7 +167,7 @@
         </div>
         <div class="project">
           <h3>Nft Card</h3>
-          <img src="./src/imagens/image-nft-card-project-reduzida.PNG" alt="">
+          <img src="./src/imagens/image-nft-card-project-reduzida.PNG" alt="Imagem do projeto NFT card">
 
           <p class="info-project">Se trata de um projeto de um card que reúne as principais informações de um produto a
             de maneira resumida. Esse projeto foi realizado para fins de treinamento do uso do flexbox</p>
@@ -181,7 +181,7 @@
         </div>
         <div class="project">
           <h3>Resumo de Resultados</h3>
-          <img src="./src/imagens/image-summary-components-project-reduzida.PNG" alt="">
+          <img src="./src/imagens/image-summary-components-project-reduzida.PNG" alt="Imagem do projeto Resumo de Resultados">
 
           <p class="info-project">Se trata de um desafio do site front-end mentor que consiste em construir um
             componente de resumo de resultados, que mostra os atributos memória, comunicação verbal e a capacidade
