Alterações na seção habilidades

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="src/css/secoes/projects.css" />
     <link rel="stylesheet" href="./src/css/secoes/back-to-top.css" />
     <link rel="stylesheet" href="src/css/secoes/footer.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -33,6 +33,9 @@
       src="https://kit.fontawesome.com/7503797751.js"
       crossorigin="anonymous"
     ></script>
+    
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+          
   </head>
 
   <body>
@@ -148,19 +151,19 @@
         <div class="container-skills">
           <div class="informacoes javascript">
             <div class="logo">
-              <i class="devicon devicon-javascript-plain" id="javascript"></i>
+            <i class="devicon-javascript-plain colored"></i>
             </div>
             <h3>JavaScript</h3>
           </div>
           <div class="informacoes html">
             <div class="logo">
-              <i class="devicon devicon-html5-plain-wordmark" id="html"></i>
+            <i class="devicon-html5-plain-wordmark colored"></i>
             </div>
             <h3>HTML5</h3>
           </div>
           <div class="informacoes css">
             <div class="logo">
-              <i class="devicon devicon-css3-plain-wordmark" id="css"></i>
+            <i class="devicon-css3-plain-wordmark colored"></i>
             </div>
             <h3>CSS3</h3>
           </div>
@@ -171,10 +174,28 @@
             <h3>GitHub</h3>
           </div>
           <div class="informacoes git">
-            <div class="logo">
-              <i class="devicon devicon-git-plain" id="git"></i>
+            <div class="logo">     
+              <i class="devicon-git-plain colored"></i>
             </div>
             <h3>Git</h3>
+          </div>
+          <div class="informacoes react">
+            <div class="logo">
+              <i class="devicon-react-original colored"></i>
+            </div>
+            <h3>React</h3>
+          </div>
+          <div class="informacoes typescript">
+            <div class="logo">   
+            <i class="devicon-typescript-plain colored"></i>
+            </div>
+            <h3>Typescript</h3>
+          </div>
+          <div class="informacoes tailwindcss">
+            <div class="logo">   
+            <i class="devicon-tailwindcss-original colored"></i>
+            </div>
+            <h3>Tailwind</h3>
           </div>
         </div>
       </section>
