Correção cor do texto no card Github

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </div>
           <div class="informacoes github">
             <div class="logo">
-              <i class="devicon devicon-github-original" id="github"></i>
+            <i class="devicon-github-original"></i>
             </div>
             <h3>GitHub</h3>
           </div>
