Melhoria na responsividade e atualização dos projetos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="É um portfólio de um desenvolvedor front-end em evolução">
     <link
       rel="shortcut icon"
       href="./src/imagens/images-favicon.png"
@@ -395,6 +396,82 @@
               >
               <a
                 href="https://gabriel-chagas-albuquerque.github.io/projeto-github-fetch-api/"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Site</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <h3>Entregação</h3>
+            <img
+              src="./src/imagens/image-entregacao-app.png"
+              alt="Imagem do projeto do site Entregação"
+            />
+            <p class="info-project">
+              Esse foi um projeto em grupo, a ideia era desenvolver uma página para uma empresa de delivery que estava arrecadando alimentos para distribuir para as vítimas das enchentes no Rio Grande do Sul, nesse projeto eu tive meu primeiro contato com Tailwind e aprendi na prática como utilizar o GitHub para o trabalho em grupo.
+            </p>
+
+            <div class="botoes">
+              <a
+                href="https://github.com/lucaoskaique/entregacao-app"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Repositório</a
+              >
+              <a
+                href="entregacao.com.br"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Site</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <!-- Projeto Resgate Mais -->
+            <h3>Resgate Mais</h3>
+            <img
+              src="./src/imagens/image-resgate-mais.png"
+              alt="Imagem do projeto do site Resgate mais"
+            />
+            <p class="info-project">
+              Nesse projeto foi desenvolvido uma página para uma ONG gaúcha que estava arrecadando doações e recrutando voluntários para ajudar as vítimas das enchentes no Rio Grande do Sul, além de documentar a situação dessas pessoas. Nesse projeto, minha participação foi a estilização de parte da página, utilizando Tailwind, também pratiquei meus conhecimentos em GitHub para o trabalho em equipe. 
+            </p>
+
+            <div class="botoes">
+              <a
+                href="https://github.com/lucaoskaique/resgatemais"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Repositório</a
+              >
+              <a
+                href="https://resgatemais.vercel.app"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Site</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <h3>Pokedex</h3>
+            <img
+              src="./src/imagens/image-pokedex.png"
+              alt="Imagem do projeto do site Pokedex"
+            />
+            <p class="info-project">
+              Nesse projeto foi desenvolvido uma página que pega todos os pokemons e suas informações de uma API e mostra na tela, ele foi feito em Reactjs, contendo botão para alternar entre os temas claro e escuro, informações adicionais do pokemon ao clicar no card, também possui filtro por tipo e nome.
+            </p>
+
+            <div class="botoes">
+              <a
+                href="https://github.com/gabriel-chagas-albuquerque/pokedex"
+                class="botao outer-shadow"
+                target="_blank"
+                >Link do Repositório</a
+              >
+              <a
+                href="https://pokedex-gabriel-albuquerque.vercel.app"
                 class="botao outer-shadow"
                 target="_blank"
                 >Link do Site</a
