Alterações no design da página

--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
     <link rel="stylesheet" href="src/css/secoes/projects.css" />
     <link rel="stylesheet" href="./src/css/secoes/back-to-top.css" />
     <link rel="stylesheet" href="src/css/secoes/footer.css" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
-    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -521,6 +517,6 @@
         </li>
       </ul>
     </footer>
-    <script src="./src/scripts/index.js"></script>
+    <script src="src/scripts/index.js"></script> 
   </body>
 </html>
